syntax = "proto3";
package com.example.grpc;

message TransferRequest {
  string account = 1;
  DecimalValue amount = 2;
  TypeOfChange type = 3;
}

message TransferResponse {
  Status status = 1;
  string message = 2;
}

message DecimalValue {
  uint32 scale = 1;
  uint32 precision = 2;
  bytes value = 3;
}

enum TypeOfChange {
  CREDIT = 0;
  DEBIT = 1;
}

enum Status {
  SUCCESS = 0;
  FAILURE = 1;
}


service TransferService {
  rpc changeAccountBalance(TransferRequest) returns (TransferResponse);
}